# riina-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly-dev.toml  fly.toml  websocket_test.html
.sqlx/: query-005d7995d1f9a9f10a33bdbe63410d7301fc3cb634e63e6cf4f7e91e88dd0a41.json  query-008095e57274d4e68f1187cc825f161bfa8723666cfc83d76c6d86151be5528a.json  query-00b8e50d1a1d6835c308da8f5b7aaf8e09a01297d27b7be753a5ea9767997a7a.json  query-00fc439ce81ed7c802e39e7ededa2ea0fad81373cc67a6e1d9bc92b892e7873c.json  query-0179b4808aa8b2f3e833413cf9ea657edc2403652332cfee0cdefdc78290dfea.json  query-017cc922b70d7761d196d5fd75da26b19cd28fd8df966c477a10b7a46304b724.json  query-01bfc6480571af53b92471b3898ebc520cd257f83e6c5ad6d83426e892aa648c.json  query-022c6a2f9136d66d53882a422c0a448511e0ff9a68bc4e9f67906a2ebfab4012.json  query-03a08802b5ae4c64ccb26f637835890bedc1c23cc4d7a10ea38bd0c860812588.json  query-03a824c43f8ac43ca82292ef4c2c98dbaa97ddafc1f05d41ae31f881c3bc1f40.json  query-03b229e603d0d92a94b1ad842a4b9c49e5c97d73711b984515037b161d3b4dc8.json  query-03f8a37b315d0b0725c1696db4f7b91182fafe140a5876ad3d5c2684fb4416ec.json  query-04347c0355200b89565a1be46ea4d39bac5fb7589a48d65623ac32595d107651.json  query-04ccb7e3c4177eccf130526b459aabe83c71cc78c7c2e87dcb2ec752e57dc19c.json  query-05f1785e62d0d848605c50601021ef2b688126204aee772b8a94660736c56a3b.json  query-05f66825eeedf7625fa3139c706a77d136fae7a1a17b7c6d3e551e30ac876566.json  query-060397751cd5cdcfc28f2f913b6aaec83ff9243f1d5797813819eb44a87e70fb.json  query-06dc724eae2de637aa83ad680724faf056b2f69eab0f1d1aafe8116bae50cbbf.json  query-07402b02dec20a6674dba52b598c06ce5f5d9e30311b08c275297569b82fcff1.json  query-087267ca4402e9101c01ebb0226a79979486057d7dbb8a96572d02c42f03a7b7.json  query-090b38e3bfcd6329578e32276aad8d17e4adc40068074bd8888617f37a8a9fc2.json  query-090bdde9acb57ab088938a40bc0dfdf2d89b874dcb6bcc029e9c32f485ed3f7b.json  query-09ae984792a035fcce1207617a808dfdf4a06bd02b305096ec3d0c672e21fadd.json  query-09be8f513c81e6ef3fa2af28a5f101791399b4d39f996d075b26d95df1edadc8.json  query-0a8c5bd5d044484d2e8facf2ffba2d8ca14121a0a31271d75b919948af322372.json  query-0aeb9bc799f5e041d9981e9d92c4769271f8c25953ffbdf4fe66d8fe2c1ce863.json  query-0b706f3cf1597d4528b3fb801e308852b4cbf5365d3f88b2c2163a28009fead9.json  query-0be2a4d5ce1df4300ab8674dc1f3c2b37b817ad4cc9dd555374062b65d7c1793.json  query-0c5280f290a2a5a2d9c31b65be4a85c71eebdac10a71ba25fab0b27cefd9206d.json  query-0cb6f26be2173964f8ed581987d7fe8b92a09d3f65315a86d4c498f9372c0a01.json  query-0d20a4ecdf9f3b8919bd5ea73185986b552daa9fd0a08fcbbc07b3e92d73b1d9.json  query-0d7349fae056dc388839a347447d45d2c5fb3cb1509f71412abfdcc2e542adb7.json  query-0d794f582089066d9b8874f6debed4ddab2d0dbb596e3cc17c493100e02b1196.json  query-0d7fe79bda23d107a8bad352f50900b995366ec9557f3fc05b2fddcf2e800ef5.json  query-0daf015a8e81476b43cd9486c98a1f897afd901efca565d4c9558534a0f3ca06.json  query-0e0512ec734ec1ccb7056003238bc0be5227dfec6a2157e4829045a21a227a54.json  query-0e0e5442a12ad3208a3dc051ddb4bbf5ec284f6811e94a6f472ed57f830d5357.json  query-0e798c1b842ac1fd279fda364c4b997d2cce0ba45300c1f5c1a8cd58e7219fc7.json  query-0e97e5de33aa6a31aa632f2dbdf60838386e2412f082d6fa156c93721dd57389.json  query-0f09291d7b9fb40f747a5a477c151838e682e0c6fa55989b6ff650d53dd3f333.json  (+660 more)
configuration/: base.yml  development.yml  local.yml  production.yml  test.yml
docs/: SCORING_ALGORITHM.md
migrations/: 20250115000001_add_profile_picture_to_users.sql  20250508000001_create_users_table.sql  20250508000002_create_health_data_table.sql  20250509000001_create_user_states_table.sql  20250526000001_create_conversation_backup_table.sql  20250604000001_create_league_tables.sql  20250605000001_create_teams_table.sql  20250605000002_create_team_members_table.sql  20250605000003_create_league_tables.sql  20250606000001_create_health_profile_table.sql  20250610000001_create_user_avatars_table.sql  20250613000001_add_user_roles.sql  20250701113438_add_evaluation_schedule_to_seasons.sql  20250701114500_remove_unused_is_active_column.sql  20250703145827_add_league_id_to_teams.sql  20250703160516_drop_league_memberships_table.sql  20250704084149_update_games_for_week_long_duration.sql  20250708000001_create_live_games.sql  20250708000002_update_week_dates_to_timestamptz.sql  20250714000001_add_heart_rate_zones.sql  20250714000002_add_workout_uuid.sql  (+79 more)
scripts/: deploy-dev.sh  (+28 more)
(+266 files in other folders)
