[package]
name = "areum-backend"
version = "0.1.0"
authors = ["Volker Leukhardt"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "areum-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9.3.1"
chrono = {version = "0.4.39", features = ["serde"] }
bcrypt = "0.17.0"
serde = "1.0.217"
uuid = { version = "1.13.2", features = ["v4", "serde"] }
serde_json = "1.0.138"
sqlx-cli = { version = "0.8.3", features = ["postgres"] }
tokio = { version = "1.43.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
config = "0.15.8"
tracing = "0.1.40"
env_logger = "0.11.6"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
tracing-actix-web = "0.7.16"
argon2 = "0.5.0"
rand = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
#tokio = { version = "1.43.0", features = ["full", "macros", "rt-multi-thread"] }
once_cell = "1.20.3"