[package]
name = "riina-backend"
version = "0.1.0"
authors = ["Volker Leukhardt"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "riina-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-web-actors = "4.2"
actix-cors = "0.7.0"
actix = "0.13"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9.3.1"
chrono = {version = "0.4.39", features = ["serde"] }
bcrypt = "0.17.0"
serde = "1.0.217"
uuid = { version = "1.13.2", features = ["v4", "serde"] }
serde_json = "1.0.138"
sqlx-cli = { version = "0.8.3", features = ["postgres"] }
tokio = { version = "1.43.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
config = "0.15.8"
tracing = "0.1.40"
env_logger = "0.11.6"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
tracing-actix-web = "0.7.16"
argon2 = "0.5.0"
rand = "0.8.5"
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager", "aio", "tokio"] }
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.11"
tokio-cron-scheduler = "0.13"
sha2 = "0.10"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-smithy-runtime = { version = "1", default-features = false, features = ["client", "connector-hyper-0-14-x", "rt-tokio"] }
aws-smithy-runtime-api = "1"
hyper = "0.14"
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "webpki-tokio"] }
rustls = { version = "0.21", default-features = false }
webpki-roots = "0.25"
bytes = "1.0"
hex = "0.4"
hmac = "0.12"
base64 = "0.22"
url = "2.5"

[dev-dependencies]
once_cell = "1.20.3"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
http = "0.2"
base64 = "0.22"